<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="heyheyoheyhey.com.ifoundclassmate3.AddCourseActivity"
    android:background="@drawable/tab_border">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_add_course_choose_subject_prompt"
                android:id="@+id/textView9"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/addCourseProgressBar"
                android:indeterminate="true"
                android:layout_weight="0.07" />
        </LinearLayout>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courseSubjectSpinner"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/activity_add_course_choose_course_prompt"
            android:id="@+id/textView10"
            android:layout_below="@+id/courseSubjectSpinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="278dp"
            android:id="@+id/addCourseListView"
            android:background="@drawable/bg_course_list"
            android:layout_below="@+id/textView10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:choiceMode="singleChoice"
            android:layout_above="@+id/textView8" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_add_course_choose_section_prompt"
                android:id="@+id/textView8"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:id="@+id/sectionListView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="0.72"
                android:layout_below="@+id/textView8"
                android:layout_alignParentBottom="true"
                android:choiceMode="singleChoice" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
